--- a/src/app/branch-master/branch-master.html
+++ b/src/app/branch-master/branch-master.html
@@ -117,7 +117,8 @@
 
 
 
-<div  style="width: 100%; height: 500px;" >
+<div  style="width: 100%; height: 500px;" *ngIf="view">
+    <button mat-raised-button color="primary" type="submit"   style="width: 100%"> Add</button>
 <ag-grid-angular
   class="ag-theme-quartz"
   style="width: 100%; height: 400px;"
