--- a/src/app/branch-master/branch-master.html
+++ b/src/app/branch-master/branch-master.html
@@ -49,7 +49,6 @@
         <div class="form-field">
             <label>Established Date</label>
             <mat-form-field appearance="outline" style="width: 100%;">
-                <mat-label>Opening Date</mat-label>
                 <input matInput [matDatepicker]="picker">
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
@@ -75,7 +74,7 @@
         <label>Select State</label>
         <mat-form-field appearance="outline" style="width: 100%;">
             <mat-select formControlName="state">
-                <mat-option *ngFor="let state of states " [value]="state">{{ state.name }}</mat-option>
+                <mat-option *ngFor="let state of states " [value]="state.name">{{ state.name }}</mat-option>
             </mat-select>
         </mat-form-field>    
     </div>   
@@ -118,7 +117,7 @@
 
 
 <div  style="width: 100%; height: 500px;" *ngIf="view">
-    <button mat-raised-button color="primary" type="submit"   style="width: 100%"> Add</button>
+    <button mat-raised-button color="primary" type="submit"   style="width: 100%" (click)="addBranch()"> Add</button>
 <ag-grid-angular
   class="ag-theme-quartz"
   style="width: 100%; height: 400px;"
