--- a/src/app/customers/customers.html
+++ b/src/app/customers/customers.html
@@ -1,1 +1,110 @@
-<p>customers works!</p>
+<form [formGroup]="customerForm" class="form-container" (ngSubmit)="onSubmit()" *ngIf="!view">
+    <div class="form-row">
+        <div class="form-field">
+        <label>Company Name</label>
+        <mat-form-field appearance="outline" class="full-width">
+            <input matInput formControlName="cname" placeholder="Enter company name">
+        </mat-form-field>
+        </div>
+        <div class="form-field">
+        <label>First Name</label>
+        <mat-form-field appearance="outline" class="full-width">
+            <input matInput formControlName="fname" placeholder="Enter first name">
+        </mat-form-field>
+        </div>
+        <div class="form-field">
+        <label>Last Name</label>
+        <mat-form-field appearance="outline" class="full-width">
+            <input matInput formControlName="lname" placeholder="Enter Last name">
+        </mat-form-field>
+        </div>
+    </div> 
+    <div class="form-row">
+        <div class="form-field">
+        <label>Company Email</label>
+        <mat-form-field appearance="outline" class="full-width">
+            <input matInput formControlName="email" placeholder="Enter company name">
+        </mat-form-field>
+        </div>
+        <div class="form-field">
+        <label>URL</label>
+        <mat-form-field appearance="outline" class="full-width">
+            <input matInput formControlName="url" placeholder="Enter first name">
+        </mat-form-field>
+        </div>
+        <div class="form-field">
+        <label>PAN No</label>
+        <mat-form-field appearance="outline" class="full-width">
+            <input matInput formControlName="panno" placeholder="Enter Last name">
+        </mat-form-field>
+        </div>
+    </div>
+     <div class="form-row">
+        <div class="form-field">
+        <label>GST</label>
+        <mat-form-field appearance="outline" class="full-width">
+            <input matInput formControlName="gst" placeholder="Enter company name">
+        </mat-form-field>
+        </div>
+        <div class="form-field">
+        <label>Mobile</label>
+        <mat-form-field appearance="outline" class="full-width">
+            <input matInput formControlName="mobile" placeholder="Enter first name">
+        </mat-form-field>
+        </div>
+        <div class="form-field">
+        <label>Address</label>
+        <mat-form-field appearance="outline" class="full-width">
+            <input matInput formControlName="inputAddress" placeholder="Enter Last name">
+        </mat-form-field>
+        </div>
+    </div>
+    //billing cycle taxexemptions
+         <div class="form-row">
+            <div class="form-field">
+         <mat-label>Select Country</mat-label>
+         <mat-form-field appearance="outline" style="width: 100%;">
+            <mat-select formControlName="country" (selectionChange)="onCountryChange()">
+                <mat-option *ngFor="let country of countries" [value]="country|json">{{ country.name }}</mat-option>
+            </mat-select>
+        </mat-form-field>
+    </div>
+ </div>
+ <div class="form-row">
+    <div class="form-field">
+      <mat-label>Select State</mat-label>
+        <mat-form-field appearance="outline" style="width: 100%;">
+            <mat-select formControlName="state">
+                <mat-option *ngFor="let state of states " [value]="state.name">{{ state.name }}</mat-option>
+            </mat-select>
+        </mat-form-field>    
+    </div>   
+    <div class="form-field">
+         <label>City Name </label>
+      <mat-form-field appearance="outline" class="full-width">
+        <input matInput formControlName="city" placeholder="Enter city name">
+      </mat-form-field>
+    </div>
+    <div class="form-field">
+        <label>Zip Code </label>
+        <mat-form-field appearance="outline" class="full-width">
+            <input matInput formControlName="zip" placeholder="Enter zip code">
+        </mat-form-field>
+    </div>
+ </div>   
+ <button mat-raised-button color="primary" type="submit"  style="width: 100%"> Submit</button>      
+</form>
+<div  style="width: 100%; height: 500px;" *ngIf="view">
+    <button mat-raised-button color="primary" type="submit"   style="width: 100%" (click)="addCustomer()"> Add</button>
+<ag-grid-angular
+  class="ag-theme-quartz"
+  style="width: 100%; height: 400px;"
+  [theme]="gridOptions.theme"
+  [columnDefs]="columnDefs"
+  [rowData]="rowData"
+  [pagination]="true"
+  [rowSelection]="rowSelection"
+  (gridReady)="onGridReady($event)">
+</ag-grid-angular>
+
+</div>
