--- a/src/app/supportticket/supportticket.css
+++ b/src/app/supportticket/supportticket.css
@@ -1,3 +1,4 @@
+
 .form-row {
   display: flex;
   gap: 16px; /* space between fields */
@@ -7,6 +8,9 @@
   flex: 1; /* all fields take equal width */
 }
 
+full-width-search{
+  width: 100%;    
+}
 .full-width {
   width: 100%;
 }
@@ -14,5 +18,16 @@
   display: flex;
   flex-direction: row;
   gap: 16px; /* spacing between buttons */
+}
+
+.form-control {
+  padding: 8px;
+  font-size: 14px;
+  width: 250px;
+}
+button {
+  margin-left: 10px;
+  padding: 6px 12px;
+  cursor: pointer;
 }
 
